<?xml version="1.0"?>
<package format="2">
    <name>tas_proj</name>
    <version>0.0.0</version>
    <description>The tas_proj package</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <!-- Example:  -->
    <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
    <maintainer email="andreas.reich@unibw.de">anre</maintainer>


    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <!--roscpp dependency just for getting filepath to .gtx file-->
    <!--Maybe possible to find alternative to make this package independent from ROS -->
    <depend>roscpp</depend>
    <depend>Proj</depend>
    <depend>Eigen3</depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>
