<?xml version="1.0"?>
<package format="2">
    <name>tas_proj</name>
    <version>0.0.0</version>
    <description>The tas_proj package</description>

    <maintainer email="andreas.reich@unibw.de">anre</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <!--roscpp dependency just for getting filepath to .gtx file-->
    <depend>roscpp</depend>
    <depend>proj</depend>
    <depend>eigen</depend>
</package>
