<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>tas_proj</name>
    <version>0.0.0</version>
    <description>The tas_proj package</description>

    <maintainer email="andreas.reich@unibw.de">anre</maintainer>
    <license>BSD</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <!--rclcpp dependency just for getting filepath to .gtx file-->
    <depend>rclcpp</depend>
    <depend>proj</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
